completed tab completion functionality